# MyDeepLearningTool

./: CMakeLists.txt  autoGradient.cpp  autoGradient.h  main.cpp
src/: CMakeLists.txt  main.cpp
src/firstTry/: CMakeLists.txt  main.cpp
src/firstTry/include/: autoGradient.h
src/firstTry/source/: autoGradient.cpp
src/include/: activateFunction.h  basicUpdate.h  calculationMethod.h  lossFunction.h  netFunction.h  node.h  tensor.h  twoParameterOperation.h  utils.h
src/node/: CMakeLists.txt  main.cpp
src/node/include/: activateFunction.h  basicUpdate.h  calculationMethod.h  lossFunction.h  node.h  tensor.h  twoParameterOperation.h
src/node/source/: activateFunction.cpp  basicUpdate.cpp  calculationMethod.cpp  lossFunction.cpp  tensor.cpp  twoParameterOperation.cpp  utils.cpp
src/source/: activateFunction.cpp  basicUpdate.cpp  calculationMethod.cpp  lossFunction.cpp  netFunction.cpp  node.cpp  tensor.cpp  twoParameterOperation.cpp
